<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_imu_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mouse_zy@qq.com">pixkit</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- ROS2 library -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- other library -->
  <!-- <depend>OpenCV</depend>
  <depend>Ceres</depend>
  <depend>Eigen3</depend> -->
  <build_depend>OpenCV</build_depend>
  <exec_depend>OpenCV</exec_depend>

  <build_depend>Ceres</build_depend>
  <exec_depend>Ceres</exec_depend>

  <build_depend>Eigen3</build_depend>
  <exec_depend>Eigen3</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
